welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: not found: value fini
while (fini=false) {
       ^BDR2:18: error: not found: value fini
case "_" => fini=true
            ^